# cyberimmune-systems-prototypes-FireFighter-drone-kos

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cross-build.sh
.github/workflows/: generate-plantuml-action.yaml
aggregation/: CMakeLists.txt
aggregation/include/: aggregation_coordinates.h  app_connector.h  i_navigationcoordinatesreader.h  kos_connector.h  server.h
aggregation/src/: aggregation.cpp.bkp  aggregation_coordinates.cpp  app_connector.cpp  kos_connector.cpp  main.cpp  server.cpp
ccu/: CMakeLists.txt
ccu/include/: app_connector.h  ccu_actions.h  gpio_connector.h  server.h
ccu/src/: app_connector.cpp  ccu_actions.cpp  gpio.cpp  main.cpp  server.cpp
cfg/: Doxyfile  doxybook.json
communication/: CMakeLists.txt
communication/include/: HTTPRequest.h  apihandler.h  app_connector.h  communication_outside.h  helper.h  i_fmacactionsreader.h  server.h
communication/src/: apihandler.cpp  app_connector.cpp  communication_outside.cpp  helper.cpp  main.cpp  server.cpp
docs/: dev.md  kzip.md
eaic/: CMakeLists.txt
eaic/include/: app_connector.h  eaic_actions.h  server.h
eaic/src/: app_connector.cpp  eaic_actions.cpp  main.cpp  server.cpp
einit/: CMakeLists.txt
einit/src/: external.psl  init.yaml.in  internal.psl  klog_entity.c  security.psl
extinguishing/: CMakeLists.txt
extinguishing/include/: extinguishing_actions.h  server.h
extinguishing/src/: extinguishing_actions.cpp  main.cpp  server.cpp
fmac/: CMakeLists.txt
fmac/include/: app_connector.h  fmac_actions.h  i_ccuactionsreader.h  i_eaicactionsreader.h  server.h
fmac/src/: app_connector.cpp  fmac_actions.cpp  main.cpp  server.cpp
fps/: HTTPRequest.h  Makefile  fps.cpp
klog_storage/: CMakeLists.txt
klog_storage/src/: klog_storage_entity.c
movement/: CMakeLists.txt
movement/include/: movement_actions.h  server.h
movement/src/: main.cpp  movement_actions.cpp  server.cpp
navigation/: CMakeLists.txt
navigation/include/: navigation_coordinates.h  server.h
navigation/src/: main.cpp  main.cpp.bkp  navigation_coordinates.cpp  server.cpp
resources/cdl/: AggregationCoordinates.cdl  CCUActions.cdl  CommunicationOutside.cdl  EAICActions.cdl  ExtinguishingActions.cdl  FMACActions.cdl  MovementActions.cdl  NavigationCoordinates.cdl  SituationActions.cdl
resources/edl/: Aggregation.edl  CCU.edl  Communication.edl  EAIC.edl  Extinguishing.edl  FMAC.edl  KlogEntity.edl  KlogStorageEntity.edl  Movement.edl  Navigation.edl  Situation.edl
resources/idl/: AggregationCoordinates.idl  CCUActions.idl  CommunicationOutside.idl  EAICActions.idl  ExtinguishingActions.idl  FMACActions.idl  MovementActions.idl  NavigationCoordinates.idl  SituationActions.idl
resources/include/: connections.h
situation/: CMakeLists.txt
situation/include/: server.h  situation_actions.h
situation/src/: main.cpp  server.cpp  situation_actions.cpp
